시간표 올림

--- a/index.html
+++ b/index.html
@@ -1,9 +1,112 @@
 <!DOCTYPE html>
 <html>
-    <head>
+<head>
+<meta charset='utf-8'>
+<style>
+table, tr, th, td{
+	border: solid 1px rgb(33, 128, 91);
+	border-collapse: collapse;
+	text-align: center;;
+	color: rgb(33,128,91);
+}
+h3{color: rgb(42, 100, 78)}
+table{width: 1000px;}
+table th{width: 130px; background-color: rgb(103, 187, 135); color: rgb(255, 255, 255);}
+th, td{ padding: 10px 0;}
+</style>
+</head>
+<body>
+<h3>디지털기술경영학과 김가은 2학년 1학기 시간표</h3>
+<table>
+	<tr>
+		<th></th>
+		<th>월</th>
+		<th>화</th>
+		<th>수</th>
+		<th>목</th>
+		<th>금</th>
+		<th>토</th>
+	</tr>
+	<tr>
+		<td>0교시<br>08:30~09:20</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td>마케팅의이해(01)<br>(벤처교육관302)</td>
+	</tr>
+	<tr>
+		<td>1교시<br>09:30~10:20</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>2교시<br>10:30~11:20</td>
+		<td></td>
+		<td rowspan="2">마케팅의이해(01)<br>(벤처교육관302)</td>
+		<td></td>
+		<td rowspan="2">경영통계(01)<br>(1호관209)</td>
+		<td></td>
+		<td>웹프로그래밍(01)<br>(1호관209)</td>
+	</tr>
+	<tr>
+		<td>3교시<br>11:30~12:20</td>
+		<td></td>
+		<td>대학영어<br>회화2(23)<br>(2호관305)</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>4교시<br>12:30~13:20</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>5교시<br>13:30~14:20</td>
+		<td></td>
+		<td rowspan="2">웹프로그래밍(01)<br>(1호관209)</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>6교시<br>14:30~15:20</td>
+		<td></td>
+		<td>경영통계(01)<br>(1호관209)</td>
+		<td></td>
+		<td></td>
+		<td>대학영어<br>회화2(23)<br>(2호관305)</td>
+	</tr>
+	<tr>
+		<td>7교시<br>15:30~16:20</td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">문화와여행(1-07)<br>(벤처교육관308)</td>
+		<td rowspan="2">사진과시네마토<br>그래피(3-07)<br>(벤처교육관308)</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>8교시<br>16:30~17:20</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td colspan="7">충남학습e러닝-메가트렌드와미래디자인</td>
+	</tr>
+</table>
 
-    </head>
-    <body>
-        안녕하세요 김가은 입니다 ~
-    </body>
+</body>
 </html>
