--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset='utf-8'>
+<title>김가은 첫 페이지</title>
 <style>
 table, tr, th, td{
 	border: solid 1px rgb(33, 128, 91);
@@ -108,7 +109,7 @@ th, td{ padding: 10px 0;}
 	</tr>
 </table>
 
-<h4><a href='회원가입.html'>회원가입 페이지로 넘어가기</a></h4> 
+<h4><a href='루바토펜션html_김가은.html'>루바토 펜션 페이지로 이동</a></h4> 
 
 </body>
 </html>
