변경합니다

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ th, td{ padding: 10px 0;}
 		<td colspan="7">충남학습e러닝-메가트렌드와미래디자인</td>
 	</tr>
 </table>
-
-<h4><a href='루바토펜션html_김가은.html'>루바토 펜션 페이지로 이동</a></h4> 
+<h4><a href='회원가입.html'>회원가입 페이지로 이동</a></h4> 
+<h5><a href='루바토펜션html_김가은.html'>루바토 펜션 페이지로 이동</a></h5> 
 
 </body>
 </html>
