변경합니다

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ h3{color: rgb(42, 100, 78)}
 table{width: 1000px;}
 table th{width: 130px; background-color: rgb(103, 187, 135); color: rgb(255, 255, 255);}
 th, td{ padding: 10px 0;}
+p {font-size: large; line-height: 200%; font-weight: bold;}
 </style>
 </head>
 <body>
@@ -108,8 +109,10 @@ th, td{ padding: 10px 0;}
 		<td colspan="7">충남학습e러닝-메가트렌드와미래디자인</td>
 	</tr>
 </table>
-<h4><a href='회원가입.html'>회원가입 페이지로 이동</a></h4> 
-<h5><a href='루바토펜션html_김가은.html'>루바토 펜션 페이지로 이동</a></h5> 
+<p>
+	<a href='회원가입.html'>[회원가입 페이지로 이동]</a> <br>
+	<a href='루바토펜션html_김가은.html'>[루바토 펜션 페이지로 이동]</a> <br>
+	<a href="행사안내 html.html">[행사 안내 페이지로 이동]</a></p>
 
 </body>
 </html>
