--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@ p {font-size: large; line-height: 200%; font-weight: bold;}
 <p>
 	<a href='회원가입.html'>[회원가입 페이지로 이동]</a> <br>
 	<a href='루바토펜션html_김가은.html'>[루바토 펜션 페이지로 이동]</a> <br>
-	<a href="행사안내 html.html">[행사 안내 페이지로 이동]</a></p>
+	<a href="행사안내 html.html">[행사 안내 페이지로 이동]</a> <br>
+	<a href="주말 야간 개장 안내html.html">[주말 야간 개장 안내 페이지로 이동]</a>
+</p>
 
 </body>
 </html>
