--- a/프로필만들기_20210308김가은.html
+++ b/프로필만들기_20210308김가은.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset='utf-8'>
     <style>
-     section{text-align:left;}
+    *{padding: 0; margin: o;}
+     section{ border: solid 5px pink; margin-right: 20px; padding: 8px; height: 180px; width: 800px;
+              text-align:left;}
      section img{float:left}
      h1{font-size: 20px;}
      h2{font-size: 16px;}
      h3{font-size: 16px;}
      h4{font-size: 16px;}
      h5{font-size: 16px;}
+     li{list-style-type: none;}
+     #section2{ border: solid 5px pink; margin-right: 20px; height: 250px;
+         padding: 8px; width: 800px;}
+     #section3{ border: solid 5px pink; margin-right: 20px; padding: 8px; height: 400px; width: 800px;}
+
     </style>
 </head>
 <body>
-    <hr><hr>
     <section>
-        <img src="김가은프로필_사진.jpg" width="150">
+        <img src="김가은프로필_사진.jpg" width="155px">
         <h1>김가은 (Kim, gaeun)</h1>
         안녕하세요. 저는 호서대 디지털기술경영학과를 재학 중입니다.<br>
         디자인에 관심이 많고, 마케팅과 광고에 관심이 많습니다.</br>
@@ -23,29 +29,33 @@
         참가했던 경험들이 있습니다. 대학교에서는 이보다 더 많은 경험들을 얻고 싶습니다.</br>
         현재 저의 목표는 확고한 진로를 찾는 것입니다. 잘 부탁드립니다.
     </section>
-    <hr><hr>
+    <br>
+    <section id="section2">
     <h5>호서대 홍보영상작품 보러가기 ↓</h5>
     <a href="https://www.youtube.com/watch?v=eLg6Gz6skpM" target="_blank">
-    <img src="호서대.PNG" width="400"></a>
-
+    <img src="호서대.PNG" width="300px"></a>
+    </section>
+    <br>  
+    <section id="section3">
     <h2>정보</h2>
     <ul>
-        <li> 이메일: khoist5@naver.com </li>
-        <li> 생년월일: 2002. 05. 01 (21세)</li>
-        <li> MBTI: INFP</li>
-        <li> 굽네치킨 알바생</li>
+        <li> -이메일: khoist5@naver.com </li>
+        <li> -생년월일: 2002. 05. 01 (21세)</li>
+        <li> -MBTI: INFP</li>
+        <li> -굽네치킨 알바생</li>
     </ul>
     <h3>학력</h3>
     <ul>
-        <li>천안 성환초등학교 졸업</li>
-        <li>천안 성환중학교 졸업</li>
-        <li>천안 북일여자고등학교 졸업</li>
-        <li>천안 호서대 디지털기술경영학과 재학 중</li>
+        <li>-천안 성환초등학교 졸업</li>
+        <li>-천안 성환중학교 졸업</li>
+        <li>-천안 북일여자고등학교 졸업</li>
+        <li>-천안 호서대 디지털기술경영학과 재학 중</li>
     </ul>
     <h4>자격증</h4>
     <ul>
-        <li>전국한자능력검정시험 2급</li>
-        <li>JLPT 일본어 N3</li>
+        <li>-전국한자능력검정시험 2급</li>
+        <li>-JLPT 일본어 N3</li>
     </ul>
+    </section>
 </body>
 </html>
