--- a/접수완료화면2.html
+++ b/접수완료화면2.html
@@ -9,7 +9,7 @@ h2{color: red; font-size: large;}
 </style>
 </head>
 <body>
-    <h1>야간개장 방문시청 등록 되었습니다.</h1>
+    <h1>야간개장 방문신청 등록 되었습니다.</h1>
     <h2>고맙습니다.</h2>
     <p><a href="주말 야간 개장 안내html.html">[되돌아가기]</a> <a href="index.html">[첫 화면으로]</a></p>
     
