--- a/프로필만들기_20210308김가은.html
+++ b/프로필만들기_20210308김가은.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <section>
-        <img src="김가은프로필_사진.jpg" width="155px">
+        <img src="img/김가은프로필_사진.jpg" width="155px">
         <h1>김가은 (Kim, gaeun)</h1>
         안녕하세요. 저는 호서대 디지털기술경영학과를 재학 중입니다.<br>
         디자인에 관심이 많고, 마케팅과 광고에 관심이 많습니다.</br>
@@ -33,7 +33,7 @@
     <section id="section2">
     <h5>호서대 홍보영상작품 보러가기 ↓</h5>
     <a href="https://www.youtube.com/watch?v=eLg6Gz6skpM" target="_blank">
-    <img src="호서대.PNG" width="300px"></a>
+    <img src="img/호서대.PNG" width="300px"></a>
     </section>
     <br>  
     <section id="section3">
