--- a/index.html
+++ b/index.html
@@ -8,13 +8,28 @@ table, tr, th, td{
 	border: solid 1px rgb(33, 128, 91);
 	border-collapse: collapse;
 	text-align: center;;
-	color: rgb(33,128,91);
-}
+	}
+.text{color: rgb(33, 128, 91);}
+td{color: white;}
+
 h3{color: rgb(42, 100, 78)}
 table{width: 1000px;}
 table th{width: 130px; background-color: rgb(103, 187, 135); color: rgb(255, 255, 255);}
 th, td{ padding: 10px 0;}
 p {font-size: large; line-height: 200%; font-weight: bold;}
+.a {background-color: none; background-color: white;}
+.a:hover{background-color: none; background-color: rgb(187, 2, 2);}
+.b {background-color: none; background-color: white;}
+.b:hover{background-color: none; background-color: rgb(8, 134, 56);}
+.c {background-color: none; background-color: white;}
+.c:hover{background-color: none; background-color: rgb(151, 64, 64);}
+.d {background-color: none; background-color: white;}
+.d:hover{background-color: none; background-color: rgb(40, 95, 124);}
+.f {background-color: none; background-color: white;}
+.f:hover{background-color: none; background-color: rgb(141, 141, 32);}
+#g {background-color: none; background-color: white;}
+#g:hover{background-color: none; background-color: rgb(58, 15, 85);}
+
 </style>
 </head>
 <body>
@@ -30,41 +45,16 @@ p {font-size: large; line-height: 200%; font-weight: bold;}
 		<th>토</th>
 	</tr>
 	<tr>
-		<td>0교시<br>08:30~09:20</td>
+		<td class="text">0교시<br>08:30~09:20</td>
 		<td></td>
 		<td></td>
 		<td></td>
 		<td></td>
 		<td></td>
-		<td>마케팅의이해(01)<br>(벤처교육관302)</td>
+		<td class="a" >마케팅의이해(01)<br>(벤처교육관302)</td>
 	</tr>
 	<tr>
-		<td>1교시<br>09:30~10:20</td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>2교시<br>10:30~11:20</td>
-		<td></td>
-		<td rowspan="2">마케팅의이해(01)<br>(벤처교육관302)</td>
-		<td></td>
-		<td rowspan="2">경영통계(01)<br>(1호관209)</td>
-		<td></td>
-		<td>웹프로그래밍(01)<br>(1호관209)</td>
-	</tr>
-	<tr>
-		<td>3교시<br>11:30~12:20</td>
-		<td></td>
-		<td>대학영어<br>회화2(23)<br>(2호관305)</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>4교시<br>12:30~13:20</td>
+		<td class="text">1교시<br>09:30~10:20</td>
 		<td></td>
 		<td></td>
 		<td></td>
@@ -73,40 +63,65 @@ p {font-size: large; line-height: 200%; font-weight: bold;}
 		<td></td>
 	</tr>
 	<tr>
-		<td>5교시<br>13:30~14:20</td>
+		<td class="text">2교시<br>10:30~11:20</td>
 		<td></td>
-		<td rowspan="2">웹프로그래밍(01)<br>(1호관209)</td>
+		<td class="a" rowspan="2">마케팅의이해(01)<br>(벤처교육관302)</td>
+		<td></td>
+		<td class="b" rowspan="2">경영통계(01)<br>(1호관209)</td>
+		<td></td>
+		<td class="c">웹프로그래밍(01)<br>(1호관209)</td>
+	</tr>
+	<tr>
+		<td class="text">3교시<br>11:30~12:20</td>
+		<td></td>
+		<td class="d">대학영어<br>회화2(23)<br>(2호관305)</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="text">4교시<br>12:30~13:20</td>
+		<td></td>
+		<td></td>
 		<td></td>
 		<td></td>
 		<td></td>
 		<td></td>
 	</tr>
 	<tr>
-		<td>6교시<br>14:30~15:20</td>
+		<td class="text">5교시<br>13:30~14:20</td>
 		<td></td>
-		<td>경영통계(01)<br>(1호관209)</td>
-		<td></td>
-		<td></td>
-		<td>대학영어<br>회화2(23)<br>(2호관305)</td>
-	</tr>
-	<tr>
-		<td>7교시<br>15:30~16:20</td>
-		<td></td>
-		<td></td>
-		<td rowspan="2">문화와여행(1-07)<br>(벤처교육관308)</td>
-		<td rowspan="2">사진과시네마토<br>그래피(3-07)<br>(벤처교육관308)</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>8교시<br>16:30~17:20</td>
+		<td class="c" rowspan="2">웹프로그래밍(01)<br>(1호관209)</td>
 		<td></td>
 		<td></td>
 		<td></td>
 		<td></td>
 	</tr>
 	<tr>
-		<td colspan="7">충남학습e러닝-메가트렌드와미래디자인</td>
+		<td class="text">6교시<br>14:30~15:20</td>
+		<td></td>
+		<td class="b">경영통계(01)<br>(1호관209)</td>
+		<td></td>
+		<td></td>
+		<td class="d">대학영어<br>회화2(23)<br>(2호관305)</td>
+	</tr>
+	<tr>
+		<td class="text">7교시<br>15:30~16:20</td>
+		<td></td>
+		<td></td>
+		<td class="f" rowspan="2">문화와여행(1-07)<br>(벤처교육관308)</td>
+		<td class="f" rowspan="2">사진과시네마토<br>그래피(3-07)<br>(벤처교육관308)</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="text">8교시<br>16:30~17:20</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td id="g" colspan="7">충남학습e러닝-메가트렌드와미래디자인</td>
 	</tr>
 </table>
 <p>
