--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@ table{width: 1000px;}
 table th{width: 130px; background-color: rgb(103, 187, 135); color: rgb(255, 255, 255);}
 th, td{ padding: 10px 0;}
 p {font-size: large; line-height: 200%; font-weight: bold;}
-.a {background-color: none; background-color: white;}
-.a:hover{background-color: none; background-color: rgb(187, 2, 2);}
-.b {background-color: none; background-color: white;}
-.b:hover{background-color: none; background-color: rgb(8, 134, 56);}
-.c {background-color: none; background-color: white;}
+.a {background-color: none; background-color: rgb(94, 126, 114);}
+.a:hover{background-color: none; background-color: rgb(219, 115, 115);}
+.b {background-color: none; background-color: rgba(76, 219, 131, 0.699);}
+.b:hover{background-color: none; background-color: rgb(33, 134, 8);}
+.c {background-color: none; background-color:rgb(119, 189, 221);}
 .c:hover{background-color: none; background-color: rgb(151, 64, 64);}
-.d {background-color: none; background-color: white;}
+.d {background-color: none; background-color: rgb(156, 180, 125);}
 .d:hover{background-color: none; background-color: rgb(40, 95, 124);}
-.f {background-color: none; background-color: white;}
-.f:hover{background-color: none; background-color: rgb(141, 141, 32);}
-#g {background-color: none; background-color: white;}
-#g:hover{background-color: none; background-color: rgb(58, 15, 85);}
+.f {background-color: none; background-color: rgb(110, 207, 183);}
+.f:hover{background-color: none; background-color: rgb(224, 153, 86);}
+#g {background-color: none; background-color:  rgb(87, 131, 100);}
+#g:hover{background-color: none; background-color: rgb(152, 119, 172);}
 
 </style>
 </head>
