시간표완성

--- a/index.html
+++ b/index.html
@@ -5,29 +5,28 @@
 <title>김가은 첫 페이지</title>
 <style>
 table, tr, th, td{
-	border: solid 1px rgb(33, 128, 91);
+	border: solid 1px rgb(173, 155, 116);
 	border-collapse: collapse;
 	text-align: center;;
 	}
-.text{color: rgb(33, 128, 91);}
+.text{color: rgba(76, 83, 80, 0.884);}
 td{color: white;}
-
-h3{color: rgb(42, 100, 78)}
+h3{ color:rgb(104, 92, 67);}
 table{width: 1000px;}
-table th{width: 130px; background-color: rgb(103, 187, 135); color: rgb(255, 255, 255);}
+table th{width: 130px;  color: rgba(76, 83, 80, 0.884);}
 th, td{ padding: 10px 0;}
 p {font-size: large; line-height: 200%; font-weight: bold;}
-.a {background-color: none; background-color: rgb(94, 126, 114);}
+.a {background-color: none; background-color: rgb(221, 201, 114);}
 .a:hover{background-color: none; background-color: rgb(219, 115, 115);}
-.b {background-color: none; background-color: rgba(76, 219, 131, 0.699);}
-.b:hover{background-color: none; background-color: rgb(33, 134, 8);}
-.c {background-color: none; background-color:rgb(119, 189, 221);}
+.b {background-color: none; background-color: rgba(117, 104, 65, 0.699);}
+.b:hover{background-color: none; background-color: rgb(78, 163, 56);}
+.c {background-color: none; background-color:rgb(211, 162, 134);}
 .c:hover{background-color: none; background-color: rgb(151, 64, 64);}
-.d {background-color: none; background-color: rgb(156, 180, 125);}
+.d {background-color: none; background-color: rgb(138, 196, 206);}
 .d:hover{background-color: none; background-color: rgb(40, 95, 124);}
-.f {background-color: none; background-color: rgb(110, 207, 183);}
+.f {background-color: none; background-color: rgb(169, 197, 103);}
 .f:hover{background-color: none; background-color: rgb(224, 153, 86);}
-#g {background-color: none; background-color:  rgb(87, 131, 100);}
+#g {background-color: none; background-color:  rgb(224, 183, 93);}
 #g:hover{background-color: none; background-color: rgb(152, 119, 172);}
 
 </style>
@@ -109,7 +108,7 @@ p {font-size: large; line-height: 200%; font-weight: bold;}
 		<td></td>
 		<td></td>
 		<td class="f" rowspan="2">문화와여행(1-07)<br>(벤처교육관308)</td>
-		<td class="f" rowspan="2">사진과시네마토<br>그래피(3-07)<br>(벤처교육관308)</td>
+		<td id="g" rowspan="2">사진과시네마토<br>그래피(3-07)<br>(벤처교육관308)</td>
 		<td></td>
 		<td></td>
 	</tr>
@@ -121,7 +120,7 @@ p {font-size: large; line-height: 200%; font-weight: bold;}
 		<td></td>
 	</tr>
 	<tr>
-		<td id="g" colspan="7">충남학습e러닝-메가트렌드와미래디자인</td>
+		<td class="text"  colspan="7">충남학습e러닝-메가트렌드와미래디자인</td>
 	</tr>
 </table>
 <p>
