변경합니디ㅏ~

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 table, tr, th, td{
 	border: solid 1px rgb(173, 155, 116);
 	border-collapse: collapse;
-	text-align: center;;
+	text-align: center;
 	}
 .text{color: rgba(76, 83, 80, 0.884);}
 td{color: white;}
@@ -128,7 +128,8 @@ p {font-size: large; line-height: 200%; font-weight: bold;}
 	<a href='루바토펜션html_김가은.html'>[루바토 펜션 페이지로 이동]</a> <br>
 	<a href="행사안내 html.html">[행사 안내 페이지로 이동]</a> <br>
 	<a href="주말 야간 개장 안내html.html">[주말 야간 개장 안내 페이지로 이동]</a><br>
-	<a href="세일안내장.html">[세일 안내장으로 이동]</a>
+	<a href="세일안내장.html">[세일 안내장으로 이동]</a><br>
+	<a href="월간일정표.html">[월간일정표로 이동]</a>
 </p>
 
 </body>
