--- a/월간일정표.html
+++ b/월간일정표.html
@@ -5,7 +5,7 @@
 <title>20210308 월간일정표</title>
 <style>
 *{padding:0; margin:0;}
-h1{padding-left: 525px; margin-top: 30px; color: white; font-weight: bold;}
+h1{padding-left: 525px; margin-top: 30px; color: white; font-weight: bold; text-shadow:  3px 3px 6px white;}
 h2{border-left: solid 14px rgb(231, 209, 84); margin: 10px; margin-bottom: 20px; padding-left: 5px; }
 table, tr, th, td{border: solid 1px rgb(255, 255, 255); border-collapse: collapse; font-size: 17px;}
 table{width: 1200px; margin-left: 10px;}
