--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@ p {font-size: large; line-height: 200%; font-weight: bold;}
 	<a href="행사안내 html.html">[행사 안내 페이지로 이동]</a> <br>
 	<a href="주말 야간 개장 안내html.html">[주말 야간 개장 안내 페이지로 이동]</a><br>
 	<a href="세일안내장.html">[세일 안내장으로 이동]</a><br>
-	<a href="월간일정표.html">[월간일정표로 이동]</a>
+	<a href="월간일정표.html">[월간일정표로 이동]</a><br>
+	<a href="쇼핑몰 판매 목록.html">[쇼핑몰 판매 목록으로 이동]</a>
 </p>
 
 </body>
