--- a/쇼핑몰 판매 목록.html
+++ b/쇼핑몰 판매 목록.html
@@ -7,8 +7,8 @@
 *{padding: 0; margin: 0;}
 h1{font-size:large; margin-left: 20px; margin-top: 20px; padding-bottom: 10px; }
 ul{list-style-type: none;}
-.all{ clear: both;  height: 110px; border-bottom: solid 1px rgb(184, 184, 184); margin-top: 15px; margin-left: 20px; margin-right: 900px; }
-#all2{clear: both;  height: 110px; border-bottom: solid 1px rgb(184, 184, 184); border-top: solid 4px rgb(184, 184, 184) ; margin-left: 20px; padding-top: 15px;  margin-right: 900px; }
+.all{ clear: both;  height: 110px; border-bottom: solid 1px rgb(184, 184, 184); margin-top: 15px; margin-left: 20px; width: 1000px; }
+#all2{clear: both;  height: 110px; border-bottom: solid 1px rgb(184, 184, 184); border-top: solid 4px rgb(184, 184, 184) ; margin-left: 20px; padding-top: 15px; width: 1000px;}
 .img{float: left; margin-left: 10px; }
 .img_title{float: left; font-size:medium; margin-left: 30px; width: 300px;}
 .price{float: left; font-size: medium; margin-left: 70px; width: 150px;}
