--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ nav{
   height: 705px;
   margin-top: 21px; margin-left: 27px; margin-right: 5px;
   border: double 0px #6fadcf; float: right;}
-.menu{border: double 4px white; background-color: #83B1C9; color: white; text-decoration: none;  width: 200px; padding: 35.2px 0; text-align: center; font-size: 18px;}
+.menu{border: double 4px white; background-color: #83B1C9; color: white; text-decoration: none;  width: 200px; padding: 28.7px 0; text-align: center; font-size: 18px;}
 .menu:link{border: double 4px #6fadcf; background-color: none; background-color: white; color: #2B7089; text-decoration: none;  width: 200px; padding: 36.5px 0; text-align: center; }
 .menu:visited{background-color: none; background-color: #6fadcf; color: white; text-decoration: none; }
 .menu:hover{ background-color: none; background-color: #6fadcf; color: white; text-decoration: none; }
@@ -113,6 +113,7 @@ h5{font-size: 20px; margin-top: 5px;}
 	<div class="menu"><a href="세일안내장.html">세일 안내장</a></div>
 	<div class="menu"><a href="월간일정표.html">월간일정표</a></div>
 	<div class="menu"><a href="쇼핑몰 판매 목록.html">쇼핑몰판매목록</a></div>
+	<div class="menu"><a href="포토아카데미.html">포토아카데미</a></div>
 </nav>
 
 <section>
